deploy/nginx-ingress/das-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: das-ingress
  namespace: bangweulu
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - bangweulu-nginx.pamdas.org
    secretName: pamdas-tls
  rules:
  - host: bangweulu-nginx.pamdas.org
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 8000
        path: /(api|static|oauth|admin|dasadmin|accounts)
      - backend:
          serviceName: web
          servicePort: 9000
        path: /(.*)
